--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ config/*
 .idea/sqlDataSources.xml
 .idea/dynamic.xml
 .idea/uiDesigner.xml
+.idea/discord-bot-core.iml
+.idea/misc.xml
 
 # Gradle:
 .idea/gradle.xml
