Added new plugin_type config option

--- a/coreftns.yml
+++ b/coreftns.yml
@@ -3,6 +3,7 @@ description:
   domain_name: jhnhnck
   plugin_prefix: core
   plugin_description: Core functions included with discord-bot-core
+  plugin_type: standard
 versioning:
   plugin_version: 0.0.5
   requires: '[*]'
